fix: fix carousel indicators color blend with background on mobile phones

--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -21,6 +21,12 @@
     bottom: rem(-16px);
 }
 
+.indicator {
+    @media screen and (max-width: rem(750px)) {
+        background: var(--animeth-text-contrast-color);
+    }
+}
+
 .control {
     width: rem(40px);
     height: rem(40px);
